# django-google-fonts

./: .gitignore  LICENSE.md  README.md  apps.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
django_google_fonts/: apps.py  tests.py
django_google_fonts/templatetags/: google_fonts.py
templatetags/: google_fonts.py
