[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[project]
name = "django_google_fonts"
version = "0.0.3"
authors = [
  { name="Andy McKay", email="andy@mckay.pub" },
]
dependencies = [
    'requests >= 2.31.0',
    'tinycss2 >= 1.2.1',
]
description = "Easy to install and offline Google fonts in Django projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andymckay/django-google-fonts"